Allow for user submitted prompt and refactor
